# SDL2_HomeWork

./: CMakeLists.txt  main.cpp
headers/: image.h  lamp.h  window.h
sources/: image.cpp  lamp.cpp  main.cpp  window.cpp
